# docs

./: .gitguardian.yaml  .gitignore  CHANGELOG.md  Makefile  compose.yml  docs-4.5.0.tgz  docs-4.6.0.tgz  docs-4.7.0.tgz  docs-4.8.0.tgz  docs-4.8.1.tgz  docs-4.8.2.tgz  docs-4.8.3.tgz  docs-4.8.4.tgz  index.yaml
docs/: env.md  search.md
env.d/development/: common
src/backend/: pyproject.toml
src/backend/core/: apps.py  choices.py  factories.py  models.py  signals.py  urls.py  utils.py
src/backend/core/api/: permissions.py  serializers.py  viewsets.py
src/backend/core/management/commands/: index.py
src/backend/core/migrations/: 0025_alter_document_link_role_alter_documentaccess_role_and_more.py
src/backend/core/services/: search_indexers.py
src/backend/core/tasks/: find.py  search.py
src/backend/core/tests/: conftest.py  test_models_comment.py  test_models_document_accesses.py  test_models_documents.py  test_services_search_indexers.py  test_utils.py
src/backend/core/tests/commands/: test_index.py
src/backend/core/tests/documents/: test_api_document_accesses.py  test_api_documents_comments.py  test_api_documents_retrieve.py  test_api_documents_search.py  test_api_documents_trashbin.py
src/backend/demo/management/commands/: create_demo.py
src/backend/impress/: settings.py
src/frontend/: package.json
src/frontend/apps/e2e/: package.json
src/frontend/apps/e2e/__tests__/app-impress/: doc-comments.spec.ts  doc-export.spec.ts  doc-visibility.spec.ts  utils-common.ts
src/frontend/apps/impress/: cunningham.ts  package.json
src/frontend/apps/impress/src/components/dropdown-menu/: DropdownMenu.tsx
src/frontend/apps/impress/src/cunningham/: cunningham-tokens.css  cunningham-tokens.ts
src/frontend/apps/impress/src/features/auth/components/: AvatarSvg.tsx  UserAvatar.tsx  index.ts
src/frontend/apps/impress/src/features/docs/doc-editor/components/: BlockNoteEditor.tsx  DocEditor.tsx
src/frontend/apps/impress/src/features/docs/doc-editor/components/BlockNoteToolBar/: BlockNoteToolbar.tsx
src/frontend/apps/impress/src/features/docs/doc-editor/components/comments/: CommentToolbarButton.tsx  index.ts  styles.tsx
src/frontend/apps/impress/src/features/docs/doc-editor/hook/: useSaveDoc.tsx
src/frontend/apps/impress/src/features/docs/doc-export/: mappingODT.ts  types.ts  utils.ts
src/frontend/apps/impress/src/features/docs/doc-export/blocks-mapping/: calloutODT.tsx  imageDocx.tsx  imageODT.tsx  index.ts  uploadLoaderODT.tsx
src/frontend/apps/impress/src/features/docs/doc-export/components/: ModalExport.tsx
src/frontend/apps/impress/src/features/docs/doc-export/inline-content-mapping/: index.ts  interlinkingLinkODT.tsx
src/frontend/apps/impress/src/features/docs/doc-header/__tests__/: DocToolBoxLicence.spec.tsx
src/frontend/apps/impress/src/features/docs/doc-header/components/: DocTitle.tsx  DocToolBox.tsx
src/frontend/apps/impress/src/features/docs/doc-management/api/: useCreateFavoriteDoc.tsx  useDeleteFavoriteDoc.tsx  useDocs.tsx  useDuplicateDoc.tsx  useUpdateDoc.tsx
src/frontend/apps/impress/src/features/docs/doc-management/components/: ModalRemoveDoc.tsx
src/frontend/apps/impress/src/features/docs/doc-share/api/: useCreateDocAccess.tsx  useCreateDocInvitation.tsx  useDeleteDocAccess.ts  useDocInvitations.tsx  useUpdateDocInvitation.ts  useUpdateDocLink.tsx
src/frontend/apps/impress/src/features/docs/doc-share/components/: DocDesynchronized.tsx  DocVisibility.tsx  SearchUserRow.tsx
src/frontend/apps/impress/src/features/docs/doc-versioning/components/: DocVersionEditor.tsx  ModalConfirmationVersion.tsx
src/frontend/apps/impress/src/features/docs/docs-grid/components/: DocsGrid.tsx  DocsGridActions.tsx  Draggable.tsx  Droppable.tsx
src/frontend/apps/impress/src/hooks/: index.ts  useKeyboardAction.ts
src/frontend/apps/impress/src/i18n/: translations.json
src/frontend/servers/y-provider/: package.json
(+2 files in other folders)
